Fixed bottom spacing issue

--- a/css/index.css
+++ b/css/index.css
@@ -314,3 +314,6 @@ div.main{
     margin-top: 5px;
     color: black;
 }
+.bottom-about{
+    padding: 15px;
+}
